objects/cm_Treasury_Review__c.object
<CustomObject>
    <fields>
        <fullName>ACH_Approval_Level__c</fullName>
        <label>ACH Approval Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Dual</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>No Approval</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_ACH_Credit_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACH Credit Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Credit_Max_Batch_Amount_s__c</fullName>
        <label>ACH Credit Max Batch Amount(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Credit_Temp_Limit_Increases_TTM__c</fullName>
        <label># ACH Credit Temp Limit Increases TTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Debit_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACH Debit Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Debit_Max_Batch_Amount_s__c</fullName>
        <label>ACH Debit Max Batch Amount(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Debit_Temp_Limit_Increases_TTM__c</fullName>
        <label># ACH Debit Temp Limit Increases TTM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_ACH_Exposure_Avg_Bal_Rating__c</fullName>
        <formula>IF( CF_Total_ACH_Exposure_Avg_Balance__c = 0, 0,
IF( CF_Total_ACH_Exposure_Avg_Balance__c*100 &lt;= 150,1,
IF( AND( CF_Total_ACH_Exposure_Avg_Balance__c*100 &gt; 150, CF_Total_ACH_Exposure_Avg_Balance__c*100 &lt;= 400), 2,
IF( AND( CF_Total_ACH_Exposure_Avg_Balance__c*100 &gt; 400, CF_Total_ACH_Exposure_Avg_Balance__c*100 &lt;= 750), 3,
IF( CF_Total_ACH_Exposure_Avg_Balance__c*100 &gt; 750, 4,0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACH Exposure / Avg Bal Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to populate the account owner from Account to TR whenever a new record is created.</description>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Reviews4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Approval_Status__c</fullName>
        <description>This field is used in Treasury Review Approval Process to keep track of treasury review status when it is ongoing approval.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approver 1 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 2 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 3 Approved</fullName>
                </value>
                <value>
                    <fullName>Approver 4 Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Cash_Flow_Supports_Limits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used under ACH Financials section</description>
        <label>Cash Flow Supports Limits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Contract_Services_Relationship_Rating__c</fullName>
        <description>This field assigns rating based on if the account is Contract Services Relationship</description>
        <formula>IF(ISPICKVAL( CF_Is_Contract_Service_Relationship__c, &quot;Yes&quot;), 4,
  IF(ISPICKVAL( CF_Is_Contract_Service_Relationship__c, &quot;No&quot;), 1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Services Relationship Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Credit_Limit__c</fullName>
        <description>This field is copied from Relationship which holds the sum of total &quot;Corporate ACH Origination Limit&quot; of all ACH Credit Origination products on the account</description>
        <formula>cm_Relationship__r.CF_Corporate_ACH_Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate ACH Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Corporate_ACH_Debit_Limit__c</fullName>
        <description>This field is copied from Relationship which holds the sum of total &quot;Corporate ACH Origination Limit&quot; of all ACH Debit Origination products on the account</description>
        <formula>cm_Relationship__r.CF_Corporate_ACH_Debit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate ACH Debit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Rating_Code_Rating__c</fullName>
        <description>This field represents the Rating associated with Credit Rating Code</description>
        <formula>IF( CF_Credit_Rating_Code__c == 1 || CF_Credit_Rating_Code__c == 2 || CF_Credit_Rating_Code__c == 3, 1, 
  IF( CF_Credit_Rating_Code__c == 4, 2,
    IF( CF_Credit_Rating_Code__c == 5, 3,
      IF( CF_Credit_Rating_Code__c == 6 || CF_Credit_Rating_Code__c == 7 || CF_Credit_Rating_Code__c == 8, 4, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Rating Code Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Credit_Rating_Code__c</fullName>
        <description>This field pulls in the Loan risk rating from the account</description>
        <label>Credit Rating Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Date_Review_Approved__c</fullName>
        <description>Used to store Date Review Approved info.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Review Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Exceeds_ACH_Return_Rate_Rating__c</fullName>
        <description>This field represents the Rating associated with if the account that exceeds ACH Return Rate.</description>
        <formula>IF(ISPICKVAL( CF_Is_Exceeds_ACH_Return_Rate__c, &quot;Yes&quot;), 3,
  IF(ISPICKVAL( CF_Is_Exceeds_ACH_Return_Rate__c, &quot;No&quot;), 1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds ACH Return Rate Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Financial_Position_Description__c</fullName>
        <description>Used under ACH Financials section</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Position Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Financially_Stable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used under ACH Financials section</description>
        <label>Financially Stable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Industry__c</fullName>
        <description>This field is used to show Industry value of associated account.</description>
        <formula>TEXT(cm_Relationship__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Is_Contract_Service_Relationship__c</fullName>
        <description>This field denotes if this is a Contract Services Relationship</description>
        <label>Is Contract Service Relationship?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Is_Exceeds_ACH_Return_Rate__c</fullName>
        <description>This field denotes if ACH return rate threshold(s) are exceeded</description>
        <label>Exceeds ACH Return Rate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Is_Restricted_NAICS_Code__c</fullName>
        <description>This field denotes if the account has restricted/prohibited NAICS Code</description>
        <label>Is Restricted NAICS Code?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Is_Third_Party_Sender_Rating__c</fullName>
        <description>This field represents the Rating associated with if the account is Third Party Sender</description>
        <formula>IF(ISPICKVAL( CF_Is_Third_Party_Sender__c, &quot;Yes&quot;), 4,
  IF(ISPICKVAL( CF_Is_Third_Party_Sender__c, &quot;No&quot;), 1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Third-Party Sender Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Is_Third_Party_Sender__c</fullName>
        <description>This field indicates if the account is a Third-Party Sender</description>
        <label>Is Third-Party Sender?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Lockbox_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lockbox Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Lockbox_Limit__c</fullName>
        <description>This field is copied from Relationship which holds the sum of total &quot;Daily Deposit Amount&quot; of all Remote Lockbox and Retail Lockbox products on the account</description>
        <formula>cm_Relationship__r.CF_Lockbox_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lockbox Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Low_Speed_RDC_Last_Used__c</fullName>
        <description>Low Sped RDC last used</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Low Speed RDC Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Low_Speed_RDC_Limit__c</fullName>
        <description>This field is copied from the relationship which holds the sum of total &quot;Daily Deposit Amount&quot; of all Low Speed RDC products on the account</description>
        <formula>cm_Relationship__r.CF_Low_Speed_RDC_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Low Speed RDC Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Max_Lockbox_Deposit_Amount_s__c</fullName>
        <label>Max Lockbox Deposit Amount(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Max_Low_Speed_RDC_Deposit_Amount_s__c</fullName>
        <description>Max Low Speed RDC Deposit</description>
        <label>Max Low Speed RDC Deposit Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Max_Mobile_RDC_Deposit_Amount_s__c</fullName>
        <label>Max Mobile RDC Deposit Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Max_RDC_Deposit_Amount_s__c</fullName>
        <label>Max High Speed RDC Deposit Amount(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Max_Wire_Amount_s__c</fullName>
        <label>Max Wire Amount(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Mobile_RDC_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile RDC Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Mobile_RDC_Limit__c</fullName>
        <description>This field is copied from the relationship which holds the sum of total &quot;Daily Deposit Amount&quot; of all Mobile RDC products on the account</description>
        <formula>cm_Relationship__r.CF_Mobile_RDC_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile RDC Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Module_Review_Recommendations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Module Review Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_NAICS_Code__c</fullName>
        <description>This field is used to show NAICS code value of associated relationship.</description>
        <formula>cm_Relationship__r.LLC_BI__Naics_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_New_CIF_Rating__c</fullName>
        <description>This formula field assigns the rating based on the New CIF field selection of Yes or No</description>
        <formula>IF(ISPICKVAL( CF_New_CIF_within_last_30_days__c, &quot;Yes&quot;), 2, 
  IF(ISPICKVAL( CF_New_CIF_within_last_30_days__c, &quot;No&quot;), 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New CIF # Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_New_CIF_within_last_30_days__c</fullName>
        <description>This field denotes if account is new and has a new CIF
7/25 - Field Label has been updated as per DF-1311</description>
        <label>Is New CIF (within last 6 mo)?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Number_of_Charge_Credit_Back_Items__c</fullName>
        <description>It is aggregate number of chargeback and credit back items between multiple CIFs and deposit account</description>
        <label>Number of Charge/Credit Back Items</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Number_of_Charge_Credit_Back_Rating__c</fullName>
        <description>This field represents the Rating based on the Number of Charge/Credit back items</description>
        <formula>IF( CF_Number_of_Charge_Credit_Back_Items__c &gt;= 50, 2,
  IF( CF_Number_of_Charge_Credit_Back_Items__c &lt; 50, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Charge/Credit Back Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Number_of_NSF_Items_Rating__c</fullName>
        <description>This field represent the Rating based on the Number of NSF Items</description>
        <formula>IF( CF_Number_of_NSF_Items__c &gt;= 15, 2, 
   IF( CF_Number_of_NSF_Items__c &lt; 15, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of NSF Items Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Number_of_NSF_Items__c</fullName>
        <description>It is aggregate number of NSF items between multiple CIFs and deposit account</description>
        <label>Number of NSF Items</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Opportunity_Analysis_Recommendations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Analysis Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_RDC_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>High Speed RDC Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_RDC_Limit__c</fullName>
        <description>This field is copied from Relationship which holds the sum of total &quot;Daily Deposit Amount&quot; of all High Speed RDC products on the account</description>
        <formula>cm_Relationship__r.CF_High_Speed_RDC_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Speed RDC Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Branch__c</fullName>
        <description>Relationship Branch</description>
        <formula>cm_Relationship__r.LLC_BI__Branch__r.Name</formula>
        <label>Relationship Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Relationship_Region__c</fullName>
        <description>Relationship Region</description>
        <formula>TEXT(cm_Relationship__r.LLC_BI__Branch__r.CF_Region__c)</formula>
        <label>Relationship Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Modification</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Restricted_NAICS_Code_Rating__c</fullName>
        <description>This field provides the rating associated based on Restricted NAICS Code of the account</description>
        <formula>IF(ISPICKVAL(CF_Is_Restricted_NAICS_Code__c, &quot;Yes&quot;), 3, 
   IF(ISPICKVAL(CF_Is_Restricted_NAICS_Code__c, &quot;No&quot;), 1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restricted NAICS Code Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Review_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to store the review approver info</description>
        <label>Review Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Reviews3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_TM_Deposit_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set/Unset based on the Account</description>
        <label>TM Deposit Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_TTM_Average_Deposit_Balances__c</fullName>
        <description>This field denotes average deposit account balance from the last twelve months.</description>
        <label>TTM Average Deposit Balances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Time_Since_Account_Opened_Rating__c</fullName>
        <description>This field provides the rating assigned based on the time since the account was opened</description>
        <formula>IF(ISPICKVAL(CF_Time_Since_Account_Opened__c,  &quot;&lt;6 Months&quot;), 2,
  IF(ISPICKVAL(CF_Time_Since_Account_Opened__c,  &quot;&gt;=6 Months&quot;), 1,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Account Opened Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Time_Since_Account_Opened__c</fullName>
        <description>This field represents the time since the account was opened</description>
        <label>Time Since Account Opened</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;6 Months</fullName>
                </value>
                <value>
                    <fullName>&gt;=6 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Credit_Exposure__c</fullName>
        <description>This field is used to show the Sum of all Corporate ACH Origination Limit for ACH Credit products</description>
        <label>Total ACH Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Debit_Exposure__c</fullName>
        <description>This field is used to show sum of all Corporate ACH Origination Limit for ACH Debit products</description>
        <label>Total ACH Debit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Exposure_Avg_Balance__c</fullName>
        <formula>IF(CF_Total_ACH_Exposure__c = null, 0,
(CF_Total_ACH_Exposure__c / CF_TTM_Average_Deposit_Balances__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ACH Exposure / Avg Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CF_Total_ACH_Exposure__c</fullName>
        <description>This field is used to store sum of all Corporate ACH Originations Limits for ACH Credit AND Debit products</description>
        <label>Total ACH Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Aggregate_Loan_Exposure__c</fullName>
        <description>This field denotes loan record exposure tied to the account/relationship</description>
        <label>Total Aggregate Loan Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Combined_Exposure_LOS_TM_Formul__c</fullName>
        <description>Used to show in Risk Rating Calculation Section within TR Page Layout.</description>
        <formula>CF_Total_Combined_Exposure_LOS_TM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Combined Exposure (LOS &amp; TM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Total_Combined_Exposure_LOS_TM__c</fullName>
        <description>This field denotes aggregate of Loan exposure and Treasury exposure</description>
        <label>Total Combined Exposure (LOS &amp; TM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Combined_Exposure_Rating__c</fullName>
        <formula>IF( CF_Total_Combined_Exposure_LOS_TM__c &lt;= 5000000, 1,
IF( AND( CF_Total_Combined_Exposure_LOS_TM__c &gt; 5000000, CF_Total_Combined_Exposure_LOS_TM__c &lt;= 10000000), 3,
IF( CF_Total_Combined_Exposure_LOS_TM__c &gt; 10000000, 4,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Combined Exposure Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Total_RDC_Exposure__c</fullName>
        <description>This field is used to store sum of all RDC Limits.</description>
        <label>Total RDC Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Treasury_Exposure_Rating__c</fullName>
        <formula>IF( CF_Total_Treasury_Exposure__c &lt; 500000,1,
IF( AND( CF_Total_Treasury_Exposure__c &gt; 500000, CF_Total_Treasury_Exposure__c &lt;= 2500000), 2,
IF( AND( CF_Total_Treasury_Exposure__c &gt; 2500000, CF_Total_Treasury_Exposure__c &lt;= 5000000), 3,
IF( CF_Total_Treasury_Exposure__c &gt; 5000000, 4,0))))</formula>
        <label>Total Treasury Exposure Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Total_Treasury_Exposure__c</fullName>
        <description>This field denotes aggregate of Treasury exposure</description>
        <label>Total Treasury Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Approval_Level__c</fullName>
        <description>This field provides the treasury specific approval level</description>
        <formula>IF( CF_Treasury_Risk_Rating__c == 1, &quot;Level 1 Approval / Low Risk&quot;, 
      IF( CF_Treasury_Risk_Rating__c == 2, &quot;Level 2 Approval / Medium Risk&quot;, 
        IF( CF_Treasury_Risk_Rating__c == 3, &quot;Level 3 Approval / Medium-High Risk&quot;, 
          IF( CF_Treasury_Risk_Rating__c == 4, &quot;Level 4 Approval / High Risk&quot;, &quot;Not Rated&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treasury Approval Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Risk_Rating__c</fullName>
        <description>This field is used to store Treasury specific risk rating value.</description>
        <formula>MAX(
CF_New_CIF_Rating__c,
CF_Contract_Services_Relationship_Rating__c,
CF_Time_Since_Account_Opened_Rating__c,
CF_Number_of_Charge_Credit_Back_Rating__c,
CF_Number_of_NSF_Items_Rating__c,
CF_Total_Combined_Exposure_Rating__c,
CF_Is_Third_Party_Sender_Rating__c,
CF_ACH_Exposure_Avg_Bal_Rating__c,
CF_Credit_Rating_Code_Rating__c,
CF_Total_Treasury_Exposure_Rating__c,
CF_Exceeds_ACH_Return_Rate_Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treasury Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Sales_Officer__c</fullName>
        <description>This field pulls the TSO name from related account.</description>
        <formula>cm_Relationship__r.TM_Treasury_Officer__r.FirstName &amp;&apos; &apos;&amp; cm_Relationship__r.TM_Treasury_Officer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treasury Sales Officer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_U_Pay_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>U-Pay Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_U_Pay_Max_Batch_Amount_s__c</fullName>
        <label>U-Pay Max Batch Amount(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_U_Pay_Portal_Limit__c</fullName>
        <description>This field is copied from Relationship which holds the sum of total &quot;Requested ACH Limit&quot; of all U-Pay Portal products on the account</description>
        <formula>cm_Relationship__r.CF_U_Pay_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>U-Pay Portal Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Waive_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used under ACH Financials section</description>
        <label>Waive Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Wire_Module_Last_Used__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wire Module Last Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Wire_Transfer_Limit__c</fullName>
        <description>This field is copied from relationship which holds the sum of total &quot;Corporate Wire Limit&quot; of all Wire Transmission products on the account</description>
        <formula>cm_Relationship__r.CF_Wire_Transfer_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wire Transfer Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Review_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Review Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lending_Relationship__c</fullName>
        <label>Lending Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>No Lending Relationship</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Lending greater than 1 year</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Originated Less than 1 Year</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Secured by Real Estate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Treasury_Services__c</fullName>
        <label>Number of Treasury Services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>2</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>=&gt; 3</label>
                </value>
                <value>
                    <fullName>0</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>